--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="about">
               <h3 class="pb-4">About Me</h3>
               <h4 class="my-name">I'm Leon-Arno</h4>
-              <p class="profession">FULL-STACK DEVELOPER & IT SPECIALIST</p>
+              <p class="profession">FULL-STACK DEVELOPER & UX/ UI SPECIALIST</p>
               <p>
                 Hi,<br />
                 I am Leon-Arno, a developer and IT specialist based in Berlin,
