refactored top social links

--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@
                 class="icon"
                 target="_blank"
               >
-                <i
-                  class="text-secondary fab fa-linkedin-in fa-1x"
-                  aria-hidden="true"
-                ></i>
+                <i class="fab fa-linkedin-in fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My linkedin profile</span>
               </a>
               <a
@@ -97,7 +94,7 @@
                 class="icon"
                 target="_blank"
               >
-                <i class="text-secondary fab fa-github fa-1x"></i>
+                <i class="fab fa-github fa-1x"></i>
                 <span class="sr-only">My github profile</span>
               </a>
               <a
@@ -105,10 +102,7 @@
                 class="icon"
                 target="_blank"
               >
-                <i
-                  class="text-secondary fab fa-twitter fa-1x"
-                  aria-hidden="true"
-                ></i>
+                <i class="fab fa-twitter fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My twitter profile</span>
               </a>
               <a
@@ -116,10 +110,7 @@
                 class="icon"
                 target="_blank"
               >
-                <i
-                  class="text-secondary fab fa-instagram fa-1x"
-                  aria-hidden="true"
-                ></i>
+                <i class="fab fa-instagram fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My instagram profile</span>
               </a>
             </div>
@@ -289,7 +280,7 @@
     </section>
 
     <!-- Contact-form -->
-    <section id="contact" class="contact">
+    <!-- <section id="contact" class="contact">
       <div class="container pt-5 pb-5">
         <h3 class="text-center p-4">Get in Touch</h3>
         <form action="#" method="post" class="contact-form">
@@ -352,7 +343,7 @@
           </button>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer class="footer">
