--- a/index.html
+++ b/index.html
@@ -344,6 +344,19 @@
         </div>
       </div>
     </section> -->
+    <!-- <section id="contact" class="contact">
+      <div class="container">
+        <div class=" email-btn col-lg-12 p-3 text-center">
+          <button
+            type="button"
+            class="rounded-0 btn btn-secondary"
+            onclick="location.href='mailto:contact@leon-rimrod.de'"
+          >
+            Send an Email
+          </button>
+        </div>
+      </div>
+    </section> -->
 
     <!-- Footer -->
     <footer class="footer">
@@ -354,17 +367,11 @@
             class="icon"
             target="_blank"
           >
-            <i
-              class="text-secondary fab fa-linkedin-in fa-2x"
-              aria-hidden="true"
-            ></i>
+            <i class="fab fa-linkedin-in fa-2x" aria-hidden="true"></i>
             <span class="sr-only">My linkedin profile</span>
           </a>
           <a href="https://github.com/Leon-Arno" class="icon" target="_blank">
-            <i
-              class="text-secondary fab fa-github fa-2x "
-              aria-hidden="true"
-            ></i>
+            <i class="fab fa-github fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My github profile</span>
           </a>
           <a
@@ -372,10 +379,7 @@
             class="icon"
             target="_blank"
           >
-            <i
-              class="text-secondary fab fa-twitter fa-2x "
-              aria-hidden="true"
-            ></i>
+            <i class="fab fa-twitter fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My twitter profile</span>
           </a>
           <a
@@ -383,10 +387,7 @@
             class="icon"
             target="_blank"
           >
-            <i
-              class="text-secondary fab fa-instagram fa-2x "
-              aria-hidden="true"
-            ></i>
+            <i class="fab fa-instagram fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My instagram profile</span>
           </a>
         </div>
