Modified contact section(removed form)

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div class="info col-sm-12 col-md-12 col-lg-7">
             <div class="about">
               <h3 class="pb-4">About Me</h3>
-              <h4 class="my-name">I'm Leon-Arno</h4>
+              <h4 class="my-name">I'm Leon-Arno Rimrod</h4>
               <p class="profession">FULL-STACK DEVELOPER & UX/ UI SPECIALIST</p>
               <p>
                 Hi,<br />
@@ -344,8 +344,12 @@
         </div>
       </div>
     </section> -->
-    <!-- <section id="contact" class="contact">
-      <div class="container">
+    <section id="contact" class="contact">
+      <div class="container contact-container">
+        <h3 class="text-center p-4">Get in Touch</h3>
+        <div class="mail-icon text-center">
+          <i class="far fa-envelope fa-3x "></i>
+        </div>
         <div class=" email-btn col-lg-12 p-3 text-center">
           <button
             type="button"
@@ -356,7 +360,7 @@
           </button>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Footer -->
     <footer class="footer">
@@ -392,8 +396,8 @@
           </a>
         </div>
         <p class="text-center text-dark pt-3">
-          &copy; 2018 Made with <i class=" p-1 text-danger fas fa-heart"></i> by
-          Leon. All Rights Reserved.
+          &copy; 2019 Made with <i class=" p-1 text-danger fas fa-heart"></i> by
+          Leon-Arno. All Rights Reserved.
         </p>
       </div>
     </footer>
