Deleted form section and removed IG link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="A Web Developer" />
+    <meta name="description" content="A Web Developer & UX/UI Designer" />
 
     <link
       rel="stylesheet"
@@ -105,14 +105,14 @@
                 <i class="fab fa-twitter fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My twitter profile</span>
               </a>
-              <a
+              <!-- <a
                 href="https://www.instagram.com/lrimrod"
                 class="icon"
                 target="_blank"
               >
                 <i class="fab fa-instagram fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My instagram profile</span>
-              </a>
+              </a> -->
             </div>
           </div>
         </div>
@@ -137,15 +137,15 @@
           <div class="info col-sm-12 col-md-12 col-lg-7">
             <div class="about">
               <h3 class="pb-4">About Me</h3>
-              <h4 class="my-name">I'm Leon-Arno Rimrod</h4>
-              <p class="profession">FULL-STACK DEVELOPER & UX/ UI SPECIALIST</p>
+              <h4 class="my-name">Leon-Arno Rimrod</h4>
+              <p class="profession">FULL-STACK DEVELOPER & UX/UI DESIGNER</p>
               <p>
                 Hi,<br />
-                I am Leon-Arno, a developer and IT specialist based in Berlin,
-                Germany. I have specialized in IT fields such as security,
-                networking, engineering and development in the last 4 years. And
-                I have now taken the path of a web developer, to bring ideas and
-                the future to you.
+                I am a developer and IT specialist based in Berlin, Germany. I
+                have specialized in IT fields such as security, networking,
+                engineering and development in the last 4 years. And I have now
+                taken the path of a web developer, to bring ideas and the future
+                to you.
               </p>
             </div>
             <button
@@ -278,72 +278,6 @@
         </div>
       </div>
     </section>
-
-    <!-- Contact-form -->
-    <!-- <section id="contact" class="contact">
-      <div class="container pt-5 pb-5">
-        <h3 class="text-center p-4">Get in Touch</h3>
-        <form action="#" method="post" class="contact-form">
-          <div class="form-row">
-            <div class="form-group col-lg-6">
-              <label for="name">Name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="name"
-                required
-                placeholder="Name *"
-              />
-            </div>
-            <div class="form-group col-lg-6">
-              <label for="email">Email address</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                aria-describedby="emailHelp"
-                required
-                placeholder="Email *"
-              />
-            </div>
-            <div class="form-group col-lg-12">
-              <label for="subject">Subject</label>
-              <input
-                type="text"
-                class="form-control"
-                id="subject"
-                placeholder="Subject"
-              />
-            </div>
-            <div class="form-group col-lg-12">
-              <label for="message">Message</label>
-              <textarea
-                class="form-control pb-4"
-                id="message"
-                rows="3 "
-                required
-                placeholder="Message *"
-              ></textarea>
-            </div>
-            <div class="submit-btn col-lg-12 p-3 text-center">
-              <button type="submit" class="rounded-0 btn btn-secondary">
-                Send Message
-              </button>
-            </div>
-          </div>
-        </form>
-        <h5 class="col-12 text-center">or</h5>
-        <div class=" email-btn col-lg-12 p-3 text-center">
-          <button
-            type="button"
-            class="rounded-0 btn btn-secondary"
-            onclick="location.href='mailto:contact@leon-rimrod.de'"
-          >
-            Send an Email
-          </button>
-        </div>
-      </div>
-    </section> -->
     <section id="contact" class="contact">
       <div class="container contact-container">
         <h3 class="text-center p-4">Get in Touch</h3>
@@ -386,14 +320,14 @@
             <i class="fab fa-twitter fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My twitter profile</span>
           </a>
-          <a
+          <!-- <a
             href="https://www.instagram.com/lrimrod"
             class="icon"
             target="_blank"
-          >
+          >a
             <i class="fab fa-instagram fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My instagram profile</span>
-          </a>
+          </a> -->
         </div>
         <p class="text-center text-dark pt-3">
           &copy; 2019 Made with <i class=" p-1 text-danger fas fa-heart"></i> by
