--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="dist/style.css" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Mono|Rubik:300,400"
+      href="https://fonts.googleapis.com/css?family=Roboto|Rubik:300,400&display=swap"
       rel="stylesheet"
     />
     <title>Leon-Arno E. Rimrod</title>
@@ -85,6 +85,7 @@
                 href="https://www.linkedin.com/in/leon-arno-rimrod-ba408b165/"
                 class="icon"
                 target="_blank"
+                rel="noreferrer noopener"
               >
                 <i class="fab fa-linkedin-in fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My linkedin profile</span>
@@ -93,6 +94,7 @@
                 href="https://github.com/Leon-Arno"
                 class="icon"
                 target="_blank"
+                rel="noreferrer noopener"
               >
                 <i class="fab fa-github fa-1x"></i>
                 <span class="sr-only">My github profile</span>
@@ -101,6 +103,7 @@
                 href="https://www.twitter.com/lrimrod"
                 class="icon"
                 target="_blank"
+                rel="noreferrer noopener"
               >
                 <i class="fab fa-twitter fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My twitter profile</span>
@@ -108,7 +111,7 @@
               <!-- <a
                 href="https://www.instagram.com/lrimrod"
                 class="icon"
-                target="_blank"
+                target="_blank" rel="noreferrer noopener" 
               >
                 <i class="fab fa-instagram fa-1x" aria-hidden="true"></i>
                 <span class="sr-only">My instagram profile</span>
@@ -304,11 +307,17 @@
             href="https://www.linkedin.com/in/leon-arno-rimrod-ba408b165/"
             class="icon"
             target="_blank"
+            rel="noreferrer noopener"
           >
             <i class="fab fa-linkedin-in fa-2x" aria-hidden="true"></i>
             <span class="sr-only">My linkedin profile</span>
           </a>
-          <a href="https://github.com/Leon-Arno" class="icon" target="_blank">
+          <a
+            href="https://github.com/Leon-Arno"
+            class="icon"
+            target="_blank"
+            rel="noreferrer noopener"
+          >
             <i class="fab fa-github fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My github profile</span>
           </a>
@@ -316,6 +325,7 @@
             href="https://www.twitter.com/lrimrod"
             class="icon"
             target="_blank"
+            rel="noreferrer noopener"
           >
             <i class="fab fa-twitter fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My twitter profile</span>
@@ -323,7 +333,7 @@
           <!-- <a
             href="https://www.instagram.com/lrimrod"
             class="icon"
-            target="_blank"
+            target="_blank" rel="noreferrer noopener" 
           >a
             <i class="fab fa-instagram fa-2x " aria-hidden="true"></i>
             <span class="sr-only">My instagram profile</span>
